Adding Updates to HomePage

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* This provide the sections to be in the center of the page and take upto maximum 7xl of width of the page in large screens */
+.basic-struture {
+  @apply w-full max-w-7xl px-4 sm:px-6 lg:px-8 mx-auto flex flex-col;
+}
