created better  UI for home, featured tours, about us, our services, destinations, destinations details

--- a/client/src/components/homePage/section01.css
+++ b/client/src/components/homePage/section01.css
@@ -1,4 +1,4 @@
-@keyframes fall {
+/* @keyframes fall {
     0% {
       top: -50px;
       opacity: 0;
@@ -11,4 +11,4 @@
   
   .animate-fall {
     animation: fall 1s ease-out forwards;
-  }
+  } */
